[gd_scene load_steps=9 format=3 uid="uid://bj866ltlivhuw"]

[ext_resource type="Texture2D" uid="uid://dcif3w56oloin" path="res://imgs/etc/dummy.png" id="1_0j1vb"]
[ext_resource type="Script" uid="uid://cn3cdstigg4i" path="res://scripts/etc/dummy.gd" id="1_2hh5m"]
[ext_resource type="Shader" uid="uid://dlq8hyfh2pkr1" path="res://shader/hit_flash.tres" id="1_k1tqs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k1tqs"]
resource_local_to_scene = true
shader = ExtResource("1_k1tqs")
shader_parameter/enabled = false
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k1tqs"]
radius = 48.0
height = 252.0

[sub_resource type="Animation" id="Animation_de8r6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_k1tqs"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_de8r6"]
_data = {
&"RESET": SubResource("Animation_de8r6"),
&"hit_flash": SubResource("Animation_k1tqs")
}

[node name="Dummy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_2hh5m")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_k1tqs")
texture = ExtResource("1_0j1vb")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_k1tqs")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_k1tqs")

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_de8r6")
}

[node name="DamageNumberPosition" type="Node2D" parent="."]
position = Vector2(0, -182)

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_shape_entered" from="HurtBox" to="." method="_on_hurt_box_area_shape_entered"]
